<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Ground Truth Dialog Strings -->
    <string name="ground_truth_label">How many passengers are currently on board the bus?</string>
    <string name="bus_route_label">What bus route are you on?</string>
    <string name="bus_route_hint">e.g. 145</string>
    <string name="bus_full">Bus Full</string>
    <string name="submit_ground_truth">OK</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <!-- /Ground Truth Dialog Strings -->
    
    <!-- Main Activity Strings -->
    <string name="app_name">PassengerSense</string>
    <string name="start_button_text">Begin Sensing</string>
    <string name="stop_button_text">Stop Sensing</string>
    <string name="ground_truth_button_text">Passenger Count</string>
    <string name="instructions_label">Instructions</string>
    <string name="instructions"></string>
    <!-- /Main Activity Strings -->
    
    <!-- Main Menu Strings -->
    <string name="help">Help</string>
    <string name="scan_results">Scan Results</string>
	<!-- /Main Menu Strings -->
	
	<!-- Help Activity Strings -->
	<string name="help_title">PassengerSense Help</string>
	<string name="help_instructions">If you have any problems with PassengerSense or have any enquires about the study please do not hesitate to contact me.</string>
	<string name="help_phone">Phone: +353 (0)87 6275737</string>
	<string name="help_email">Email: brandons@tcd.ie</string>
	<string name="call_stephen_button">Call</string>
	<string name="text_stephen_button">SMS</string>
	<string name="setup_title">PassengerSense Setup</string>
	<string name="confirm_token">Use Token</string>
	<string name="token_hint">Enter API Token</string>
	<string name="test_result">Test Results</string>
	<string name="test_token_button">Test Token</string>
	<!-- /Help Activity Strings -->

</resources>