<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView
		 android:id="@+id/bus_route_label"
		 android:layout_height="wrap_content"
		 android:layout_width="match_parent"
		 android:text="@string/bus_route_label"
	 />
    
    <EditText 
        android:id="@+id/bus_route"
        android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:hint="@string/bus_route_hint"	
     />
    
    <TextView
		 android:id="@+id/ground_truth_label"
		 android:layout_height="wrap_content"
		 android:layout_width="match_parent"
		 android:text="@string/ground_truth_label"
	 />
    
    <Button
        android:id="@+id/bus_full"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:text="@string/bus_full" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus" />

    <EditText
        android:id="@+id/ground_truth_input"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:inputType="number" />
    
        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus" />
    
    <Button 
        android:id="@+id/submit_ground_truth"
        android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/submit_ground_truth"
        />

</LinearLayout>
