<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/help_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:text="@string/help_title"
       	android:gravity="center_horizontal"
        />
    
    <TextView
        android:id="@+id/help_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="30sp"
        android:text="@string/help_instructions"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/help_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="30sp"
        android:text="@string/help_phone"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/help_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="30sp"
        android:text="@string/help_email"
        android:textSize="12sp" />
    
	<LinearLayout 
	    android:id="@+id/help_buttons" 
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent" >
	    <Button 
	        android:id="@+id/call_stephen_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" 
	        android:text="@string/call_stephen_button">
	    </Button>
	    <Button 
	        android:id="@+id/text_stephen_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1" 
	        android:text="@string/text_stephen_button">
	    </Button>
	</LinearLayout>
        
	<TextView
        android:id="@+id/setup_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:text="@string/setup_title"
        android:paddingTop="30sp"
       	android:gravity="center_horizontal"
        />
	
    <EditText 
        android:id="@+id/api_token"
        android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:hint="@string/token_hint" 	
    	/>
    
    <Button 
        android:id="@+id/confirm_token" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_token">
    </Button>
	
    <Button 
        android:id="@+id/test_token_button" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"	
        android:text="@string/test_token_button">
    </Button>

</LinearLayout>