<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.passengersense.MainActivity" >
	
    <TextView
        android:id="@+id/welcome"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:text="@string/app_name"
       	android:gravity="center_horizontal"
        />
    	
    <Button 
    	android:id="@+id/start"
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:text="@string/start_button_text"
    	android:background="#00CC00"
    	android:padding="10dp"
    	android:layout_marginTop="20dp"
     	/>
    
    <Button 
    	android:id="@+id/ground_truth_button"
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:text="@string/ground_truth_button_text"
    	android:layout_marginTop="20dp"
     	/>
    
    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FF0000"
        android:padding="10dp"
        android:text="@string/stop_button_text" />

    <TextView
        android:id="@+id/instructions_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="30sp"
        android:text="@string/instructions_label"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/instructions" />
    
</LinearLayout>
